--- a/pages/推广华文学习委员会.md
+++ b/pages/推广华文学习委员会.md
@@ -36,7 +36,7 @@ description: ""
 <br>
 <img src="/images/Posters/MTLS_CPCLL_v5.jpg">
 <br>
-<a href="https://www.cpcllmtls22.com" target="_blank"><span style="font-family:KaiTi;font-size:20px;">线上活动：“华语真好玩”</span></a>
+<a href="https://www.cpcllmtls.com" target="_blank"><span style="font-family:KaiTi;font-size:20px;">线上活动：“华语真好玩”</span></a>
 <br/>
 <p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;margin:10px;">For the best and most accurate viewing experience of this site, the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
