--- a/pages/தமிழ்மொழிப் பாடக்கலைத்திட்டம் (தொடக்கநிலை).md
+++ b/pages/தமிழ்மொழிப் பாடக்கலைத்திட்டம் (தொடக்கநிலை).md
@@ -60,9 +60,9 @@ td{
 <h4 id="C1" style="font-family:Anjal New InaiMathi Sch Book;">நெகிழ்வுத்தன்மைமிக்க பாடத்திட்டம்
 </h4>
 <img src="/images/MTLS2022_TL_Curriculum_V2_300PPI_PriSch_5.jpg"><br/>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/39R_NiRBC08" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture;align:center;" allowfullscreen=""></iframe><br />
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Phqg9KlD0g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture;align:center;" allowfullscreen=""></iframe><br />
     <p style="font-weight:;">Video 1</p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/Phqg9KlD0g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture;align:center;" allowfullscreen=""></iframe>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/39R_NiRBC08" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture;align:center;" allowfullscreen=""></iframe>
     <p style="font-weight:;">Video 2</p>
 <img src="/images/MTLS2022_TL_Curriculum_V2_300PPI_PriSch_6-min.jpg">
 <br/>
