Update file: தமிழ் ஒளிக்காட்சிகள்.md

--- a/_sharing-session/தமிழ் ஒளிக்காட்சிகள்.md
+++ b/_sharing-session/தமிழ் ஒளிக்காட்சிகள்.md
@@ -27,7 +27,7 @@ description: ""
     padding: 10px 13px;
     margin: -5px 13px;
     border-radius: 6px;
-    width: 61%;
+    width: 252px;
     text-align: center;
 	display:block;
 	}
