--- a/pages/高中.md
+++ b/pages/高中.md
@@ -192,7 +192,8 @@ width:80%;
 </h4>
  <img src="/images/MTLS2022_CL_Curriculum_V1_JC_H1-Chi.jpg" />
 	<br>
-<a href="/files/2020_h1cl-and-clb-syllabus_pre-university.pdf" target="_blank" style="background-color: #d14165; font-size: 25px; font-family:KaiTi; font-weight: bold; text-decoration: none; padding: 12px 14px; color: #ffffff; border-radius: 30px; display: inline-block; miso-padding-alt: 0;"> H1华文与华文 B 课程标准 </a>
+<a href="/files/2020_h1cl-and-clb-syllabus_pre-university.pdf" target="_blank" class="btn02" style="color:#fff;font-family:KaiTi;"> <span style="font-size:21px;font-family:KaiTi;">H1华文与华文 B 课程标准 </span>
+</a>
 <br />
   <a href="/files/2020_h1mtl-and-mtlb-syllabus_pre-university.pdf" target="_blank" class="btn02" style="color:#fff;"> <span style="font-size:20px;font-family:Lato,sans-serif">H1MTL &amp; MTL‘B’ Syllabus Document
  </span></a>
