--- a/pages/高中.md
+++ b/pages/高中.md
@@ -192,6 +192,8 @@ width:80%;
 </h4>
  <img src="/images/MTLS2022_CL_Curriculum_V1_JC_H1-Chi.jpg" />
 	<br>
+  <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">H1华文、华文B相关链接:
+</h4>
 <a href="/files/2020_h1cl-and-clb-syllabus_pre-university.pdf" target="_blank" class="btn02" style="color:#fff;font-family:KaiTi;"> <span style="font-size:21px;font-family:KaiTi;">H1华文与华文 B 课程标准 </span>
 </a>
 <br />
