--- a/pages/高中.md
+++ b/pages/高中.md
@@ -313,7 +313,7 @@ width:80%;
  <center>
    <iframe width="642" height="365" src="https://www.youtube.com/embed/itpMdYJYzfc" frameborder="0" class="iframe1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br /><span style="color:#d14165;font-size:18px;font-family:KaiTi">语特三十纪念视频
 </span></center>
-<h4 style="font-size:35px;font-family:KaiTi;color:#d14165">语特相关链接</h4>
+<h4 style="font-size:35px;font-family:KaiTi;color:#d14165">语特相关链接:</h4>
 <div class="clearfix">
   <div class="img-container3">
  <a href="https://www.moe.gov.sg/page%20not%20found?item=%2fprogrammes%2fclep-jc&user=extranet%5cAnonymous&site=moe-website" target="_blank" class="btn9" style="color:#fff;font-family:KaiTi;">高中语特简介</a>
