--- a/pages/陆小燕老师.md
+++ b/pages/陆小燕老师.md
@@ -25,7 +25,7 @@ max-width:100%;
 </style>
  <body> 
   <a href="/OPMTL-Award" style="float:left;">Back</a>
- <img src="#" style="width:100%" />
+ <img src="/images/OPMTLPic/MTLS_OPMTL_Awards_V3_Ms-Lu-Xiaoyan.png" style="width:100%" />
     <br />
      <h4 style="font-family:KaiTi;">感言</h4>
     <p style="text-align:justify;font-family:KaiTi">
