Update file: திருவாட்டி நஸ் ரீன் பானு  சூராலி ஹபீப் முகமது.md

--- a/pages/திருவாட்டி நஸ் ரீன் பானு  சூராலி ஹபீப் முகமது.md
+++ b/pages/திருவாட்டி நஸ் ரீன் பானு  சூராலி ஹபீப் முகமது.md
@@ -24,7 +24,7 @@ max-width:100%;
 }
 </style>
 <a href="/OPMTL-Award" style="float:left;">Back</a>
- <img src="#" style="width:100%" />
+ <img src="/images/OPMTLPic/MTLS_OPMTL_Awards_V3_Mdm-Nazreen-Banu.png" style="width:100%" />
     <br />
      <h4 style="font-family:'Anjal InaiMathi';">மேற்கோள்</h4>
     <p style="text-align:justify;font-family:'Anjal InaiMathi';">
