--- a/pages/திருவாட்டி நஸ் ரீன் பானு  சூராலி ஹபீப் முகமது.md
+++ b/pages/திருவாட்டி நஸ் ரீன் பானு  சூராலி ஹபீப் முகமது.md
@@ -27,8 +27,7 @@ max-width:100%;
  <img src="/images/OPMTLPic/MTLS_OPMTL_Awards_V3_Mdm-Nazreen-Banu.png" style="width:100%" />
 <br>
 <h4 style="font-family:'Anjal InaiMathi';">மேற்கோள்</h4>
-<p style="text-align:justify;font-family:'Anjal InaiMathi';">
-    சிங்கப்பூரில் பல்லினப் பண்பாட்டைப் பற்றிய புரிந்துணர்வையும், தமிழில் கருத்துப்பரிமாற்றத்திற்கான தன்னம்பிக்கையையும் பிள்ளைகளிடம் ஏற்படுத்த நான் விழைகிறேன். பெற்றோருடன் இணைந்து செயற்படுவதோடு, பிள்ளைகளின் பின்புலம், திறன்கள், விருப்பங்கள் ஆகியவற்றை அறிதல், பொருத்தமான கற்றல் நோக்கங்களைத் திட்டமிடுதல், கற்றலுக்குரிய மகிழ்ச்சியான சூழலை உருவாக்குதல், அர்த்தமுள்ள விளையாட்டு நடவடிக்கைகளை வடிவமைத்தல் ஆகியவையும் ஆழமான தமிழ்மொழி கற்றல் அனுபவங்களைப் பிள்ளைகளுக்கு வழங்குவதற்கு அவசியம் என்று நான் நம்புகிறேன். நான் விரும்பிக் கற்ற தமிழ்மொழியைக் கற்பிக்கும் பணியில் இருப்பதை எண்ணிப் பெருமிதங்கொள்கிறேன்.</p>
+<p style="text-align:justify;font-family:'Anjal InaiMathi';">சிங்கப்பூரில் பல்லினப் பண்பாட்டைப் பற்றிய புரிந்துணர்வையும், தமிழில் கருத்துப்பரிமாற்றத்திற்கான தன்னம்பிக்கையையும் பிள்ளைகளிடம் ஏற்படுத்த நான் விழைகிறேன். பெற்றோருடன் இணைந்து செயற்படுவதோடு, பிள்ளைகளின் பின்புலம், திறன்கள், விருப்பங்கள் ஆகியவற்றை அறிதல், பொருத்தமான கற்றல் நோக்கங்களைத் திட்டமிடுதல், கற்றலுக்குரிய மகிழ்ச்சியான சூழலை உருவாக்குதல், அர்த்தமுள்ள விளையாட்டு நடவடிக்கைகளை வடிவமைத்தல் ஆகியவையும் ஆழமான தமிழ்மொழி கற்றல் அனுபவங்களைப் பிள்ளைகளுக்கு வழங்குவதற்கு அவசியம் என்று நான் நம்புகிறேன். நான் விரும்பிக் கற்ற தமிழ்மொழியைக் கற்பிக்கும் பணியில் இருப்பதை எண்ணிப் பெருமிதங்கொள்கிறேன்.</p>
 <h4 style="font-family:'Anjal InaiMathi';">எழுத்து விளக்கம்</h4>
 <p style="text-align:justify;font-family:'Anjal InaiMathi';">திருவாட்டி  நஸ்ரின் கற்பித்தலுக்குத் தேவையான பயிற்றுவளங்களைத் தயார்செய்து, பிள்ளைகளை ஈர்க்கும் வண்ணம் பாடங்களை நடத்தும் திறமை கொண்டவர்,  கற்பித்தலுக்கு இவர் தேர்ந்தெடுக்கும்  பாடல்கள், கதைகள், விளையாட்டுகள் பிள்ளைகளிடையே கற்கும் ஆர்வத்தையும் கற்றலில் மகிழ்ச்சியையும் ஏற்படுத்துகின்றன. சிறப்பான வகுப்பறை மேலாண்மைத்திறன் வாய்ந்த ஆசிரியரான திருமதி நஸ்ரின் எல்லாப் பிள்ளைகளிடத்திலும் சமமான அக்கறையும் பரிவும் காட்டுவதோடு பாதுகாப்புமிக்க வகுப்பறைச் சூழலை ஏற்படுத்துகிறார். பிள்ளைகளைக் கவரக்கூடிய நல்ல குரல்வளம் படைத்த இவர் பிள்ளைகளிடம் இனிமையாகப் பழகும் தன்மைகொண்டவர்.</p>
 <p style="text-align:justify;font-family: 'Anjal InaiMathi';">திருமதி நஸ்ரின் பிள்ளைகள் பாடங்களை எளிதில் புரிந்துகொள்வதற்கு எளிய தொடர்களைப் பயன்படுத்துகிறார். ஒவ்வொரு பிள்ளையும் தனித்துவமிக்கவர் என்பதை நன்கு அறிந்துகொண்டு அவரவர் தேவைகளுக்கேற்ற ஆதரவை வழங்கிப் பாடங்களை அவர் நடத்துகிறார். வினாவுக்கு உடனடியாக விடையை எதிர்பாராமல் பிள்ளைகள் நன்கு சிந்தித்துப் பதிலுரைக்கக் கால அவகாசமளித்து ஊக்கமூட்டும் பண்பு இவரிடம் உண்டு. அர்த்தமுள்ள வினாக்களைக் கேட்பதன்வழிப் பிள்ளைகளைச் சிந்திக்கச் செய்து நல்ல புரிந்துணர்வு வளர்வதற்கு ஊக்குவிக்கிறார்.  திருமதி நஸ்ரின் பிள்ளைகளை மையமாகக்கொண்ட கற்பித்தல் அணுகுமுறையைப் பின்பற்றிப் பாடங்களைச் சுவையாக நடத்தும் திறமைவாய்ந்தவர். </p>
