Update file: பல்கலைக்கழகப் புகுமுக நிலை.md

--- a/pages/பல்கலைக்கழகப் புகுமுக நிலை.md
+++ b/pages/பல்கலைக்கழகப் புகுமுக நிலை.md
@@ -253,7 +253,7 @@ width:100%;
  <br /><br />
 <h4 style="font-family:Anjal New InaiMathi Sch Book;color:purple;font-size:30px;">தமிழ்மொழி விருப்பப்பாடத் திட்டம் வழங்கும் பள்ளிகளில் சிறப்பு அறைகள்</h4>
 <p style="font-family:Anjal New InaiMathi Sch Book;font-size:22px;">தமிழ்மொழி விருப்பாடத்தைப் பயிலும் மாணவர்களுக்கு, ஆர்வமுட்டும் வகையில் பலதரப்பட்ட நடவடிக்கைகளை நடத்த மாணவர்களுக்காக ஒரு சிறப்பு அறை இருப்பது அவசியம். இதற்காகக் கல்வி அமைச்சு சிறப்பு நிதி வழங்கியுள்ளது. ஆசிரியர்கள் தங்கள் மாணவர்களுக்குத் தேவையான பல்வேறு வசதிகளைக் கொண்டமைந்த அறையை  உருவாக்கினர். தேசியக் கல்லூரி விருப்பப்பாடத்திட்டத்தைப் பயிலும் மாணவர்களுக்காக உருவாக்கிய சிறப்பு அறையின் திறப்பு விழா. </p>
- <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/QXvV21a-TqE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe> 
+ <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/yA0TRkUiOCc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe> 
 
   <br />
 <h4 style="font-family:Anjal New InaiMathi Sch Book;color:purple;">கல்வி அமைச்சு வழிநடத்தும் நடவடிக்கைகள்</h4>
