--- a/pages/உயர்நிலை.md
+++ b/pages/உயர்நிலை.md
@@ -99,7 +99,7 @@ width:90%;
   <p style=" text-align:justify; padding:8px; font-family:Anjal New InaiMathi Sch Book; font-size: 24px;"> சிங்கப்பூரில் 1834-ஆம் ஆண்டில்தான் ஒரு பள்ளியில் முதன்முறையாகத் தமிழ் வகுப்பு  அறிமுகப்படுத்தப்பட்டது. இருந்தபோதிலும், 1958-ஆம் ஆண்டில்தான் தொடக்கநிலை, உயர்நிலைப் பள்ளிகளுக்குரிய தமிழ்மொழிப் பாடத்திட்டம் உருவாக்கப்பட்டது. இது ஆங்கிலத்தில் அச்சிடப்பெற்றிருந்தது. அதன் பின்னர், நமது அரசாங்கத்தால் செயற்படுத்தப்பெற்ற பல புதிய கல்விக்கொள்கைகளுக்கு ஏற்பப் பாடத்திட்டங்கள் திருத்தியமைக்கப்பெற்றன. <br />
    <br />
    பின்வரும் ஒளிக்காட்சியில் பாடத்திட்டத்தின் வளர்ச்சிநிலையைக் காணலாம்.  </p>
-    <h4 style="font-family:Anjal New InaiMathi Sch Book; font-size:24px"> உயர்நிலைத் தமிழ்மொழிப் பாடத்திட்டம் (1958முதல் 2011வரை)
+    <h4 style="font-family:Anjal New InaiMathi Sch Book; font-weight: bold; text-align: center; font-size:24px"> உயர்நிலைத் தமிழ்மொழிப் பாடத்திட்டம் (1958முதல் 2011வரை)
 </h4>
   <center>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/15TaqCqQ4To" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe> </center>
