--- a/pages/உயர்நிலை.md
+++ b/pages/உயர்நிலை.md
@@ -115,8 +115,7 @@ width:90%;
   <img src="/images/MTLS2022_TL_Curriculum_V2_SecSch_3.gif" />
   <h2 id="C4" style="font-family:Anjal New InaiMathi Sch Book; font-size:30px; font-weight:bold; text-align:center;">புதிய கூறுகளும் புதிய முயற்சிகளும் </h2>
  <img src="/images/tl-sec_poster05.jpg" /><br /> 
- <h2 id="C9" style="font-family:Anjal New InaiMathi Sch Book;  font-size:36px; font-weight:bold; text-align:center;">பண்பாட்டறிவை வளப்படுத்துதல்</h2>
-  <img src="/images/MTLS2022_TL_Curriculum_V2_SecSch_4.jpg" />
+  <img  id="C9" src="/images/MTLS2022_TL_Curriculum_V2_SecSch_4.jpg" />
   <h2 id="C10" style="font-family:Anjal New InaiMathi Sch Book;  font-size:30px; font-weight:bold; text-align:center;">இலக்கியப் பனுவல்களின் வாயிலாக மொழி ஈடுபாட்டை வளர்த்தல் </h2>
 <p style="font-family:Anjal New InaiMathi Sch Book; text-align:justify; padding: 8px; font-size:24px;">மாணவர்களின் மொழியறிவுக்கு ஏற்ற நல்ல இலக்கியப் பனுவல்கள் கற்பனையாற்றலைத் தூண்டி நூல் படித்தலில் ஈடுபாட்டை வளர்க்கும். அதனால், அவர்களின் மொழி கற்றல் மேம்பட்டு, அவர்கள் தமிழ் நூல்களை விரிவாகப் படிக்கத் தொடங்குவார்கள்.<br />
  <br />
@@ -138,6 +137,7 @@ width:90%;
     <img src="/images/Tl-Sec-4.png" style="width:100%">
   </div>
 </div>
+ <img src="/images/MTLS2022_TL_Curriculum_V2_SecSch_5.jpg" /><br />
 <p style="text-align:center;font-family:Anjal New InaiMathi Sch Book; font-size:20px" class="lbCh">மாணவர் கற்றல் தளத்தில் நடப்புச் செய்திகள்
 </p>
        <center>
