--- a/pages/高中.md
+++ b/pages/高中.md
@@ -63,7 +63,7 @@ img-container2 {
   width: 33.33%;
   padding: 5px;
 }
-	.img-container3 {
+  .img-container3 {
   float: left;
   width: 32%;
   padding: 4px;
@@ -103,7 +103,7 @@ padding: 26px;
     display: block;
     margin-left: 26px;
   }
-	.btn3{
+  .btn3{
     font-size: 18px;
     font-family: KaiTi;
     background-color:#d14165;
@@ -135,6 +135,11 @@ padding: 26px;
     margin-left: 26px;
     width:29%;
   }
+  .columnbtn02 {
+  float: left;
+  width: 50%;
+  padding:5px;
+ }
   .btn02 {
     font-size: 18px;
     font-family: KaiTi;
@@ -145,6 +150,22 @@ padding: 26px;
     display: block;
     margin-left: 26px;
     width:35%;
+  }
+  .columnbtn03 {
+  float: left;
+  width: 33.33%;
+  padding:5px;
+}
+.btn03 {
+    font-size: 18px;
+    font-family: KaiTi;
+    background-color:#d14165;
+    padding: 8px 8px;
+    border-radius: 6px;
+    text-align: center;
+    display: block;
+    margin-left: 26px;
+    width:100%;
   }
    .row {
     display: flex;
@@ -191,14 +212,22 @@ width:80%;
 <h4 id="C2" style="font-size:35px;font-family:KaiTi;color:#d14165;">H1华文与华文B
 </h4>
  <img src="/images/MTLS2022_CL_Curriculum_V1_JC_H1-Chi.jpg" />
-	<br>
+  <br>
   <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">H1华文、华文B相关链接:
 </h4>
-<a href="/files/2020_h1cl-and-clb-syllabus_pre-university.pdf" target="_blank" class="btn02" style="color:#fff;font-family:KaiTi;"> <span style="font-size:21px;font-family:KaiTi;">H1华文与华文 B 课程标准 </span>
+<div class="row">
+  <div class="columnbtn02">
+   <a href="/files/2020_h1cl-and-clb-syllabus_pre-university.pdf" target="_blank" class="btn02" style="color:#fff;font-family:KaiTi;"> <span style="font-size:21px;font-family:KaiTi;">H1华文与华文 B 课程标准 </span>
 </a>
-<br />
-  <a href="/files/2020_h1mtl-and-mtlb-syllabus_pre-university.pdf" target="_blank" class="btn02" style="color:#fff;"> <span style="font-size:20px;font-family:Lato,sans-serif">H1MTL &amp; MTL‘B’ Syllabus Document
+  </div>
+  <div class="columnbtn02">
+   <a href="/files/2020_h1mtl-and-mtlb-syllabus_pre-university.pdf" target="_blank" class="btn02" style="color:#fff;"> <span style="font-size:20px;font-family:Lato,sans-serif">H1MTL &amp; MTL‘B’ Syllabus Document
  </span></a>
+  </div>
+  </div>
+
+
+
   <h4 id="C3" style="font-size:35px;font-family:KaiTi;color:#d14165">H2华文与文学
 </h4>
 <img src="/images/MTLS2022_CL_Curriculum_V1_JC_H2-CLL.jpg" />
@@ -206,17 +235,17 @@ width:80%;
 </h4>
   <div class="clearfix">
   <div class="img-container1">
- <a href="https://www.moe.gov.sg/-/media/files/post-secondary/syllabuses/mtl/2020-h2h3cll-syllabus.pdf?la=en&hash=3D0B0283BCFB6BCEE253077B44A97CE1FA28F619" class="btn1" style="color:#fff;font-family:KaiTi;">H2/H3华文与文学课程标准</a>
+ <a href="https://www.moe.gov.sg/-/media/files/post-secondary/syllabuses/mtl/2020-h2h3cll-syllabus.pdf?la=en&hash=3D0B0283BCFB6BCEE253077B44A97CE1FA28F619" class="btn1" style="color:#fff;font-family:KaiTi; font-size:21px">H2/H3华文与文学课程标准</a>
   </div>
    <div class="img-container1">
- <a href="https://www.moe.gov.sg/-/media/files/post-secondary/syllabuses/mtl/2020-h2h3mtll-syllabus.pdf?la=en&hash=5E5872607A094E2A64EB0D96A419FBA86CCAB8AE" class="btn2" style="color:#fff;font-family:Lato,sans-serif;">H2/H3 Mother Tongue Language and Literature Syllabus Document</a>
+ <a href="https://www.moe.gov.sg/-/media/files/post-secondary/syllabuses/mtl/2020-h2h3mtll-syllabus.pdf?la=en&hash=5E5872607A094E2A64EB0D96A419FBA86CCAB8AE" class="btn2" style="color:#fff;font-family:Lato,sans-serif;font-size:21px">H2/H3 Mother Tongue Language and Literature Syllabus Document</a>
   </div>
   </div>
 <h4  style="font-size:35px;font-family:KaiTi;color:#d14165">大学相关科系链接：
 </h4>
 <div class="clearfix">
   <div class="img-container">
- <a href="https://fass.nus.edu.sg/cs/admissions/" class="btn3" target="_blank" style="color:#fff;font-family:KaiTi;">新加坡国立大学中文系</a>
+ <a href="https://fass.nus.edu.sg/cs/specialisations/ " class="btn3" target="_blank" style="color:#fff;font-family:KaiTi;">新加坡国立大学中文系</a>
   </div>
   <div class="img-container">
   <a href="https://www.ntu.edu.sg/soh/admissions/undergraduate/chinese" target="_blank" class="btn4" style="color:#fff;font-family:KaiTi;">南洋理工大学中文系</a>
@@ -229,82 +258,100 @@ width:80%;
 <br/>
   </div>
   <div class="img-container">
-  <a href="https://www.cl.ntu.edu.tw/" target="_blank" class="btn7" style="color:#fff;font-family:KaiTi;">国立台湾大学中文系</a>
+  <a href="http://www.cl.ntu.edu.tw/home.jsp" target="_blank" class="btn7" style="color:#fff;font-family:KaiTi;">国立台湾大学中文系</a>
   </div>
 </div>
   <br />
  <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">H2翻译</h4>
  <img src="/images/MTLS2022_CL_Curriculum_V1_JC_H2-Translation.jpg">
-  <a href="/files/2021-h2tr-syllabus.pdf" target="_blank">
-    <span style="font-size:21px;font-family:KaiTi;">H2翻译课程标准</span></a>
-  <br />
-  <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">奖学金与大学相关科系链接</h4>
-<div class="clearfix">
-  <div class="img-container">
- <a href="https://www.mci.gov.sg/careers-grants/scholarship/scholarship/scholarships-offered" target="_blank" class="btn8" style="color:#fff;font-family:KaiTi;">MCI奖学金</a>
-  </div>
-  </div>
- <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">H2翻译相关链接</h4>
-<a href="https://www.moe.gov.sg/-/media/files/syllabus/2023-preu-h2-china-studies-in-chinese.ashx?la=en&hash=85E04BFBF2585E8619ABE2CEA7616D83128F9DA7" class="btn01" target="_blank" style="color:#fff;font-family:KaiTi;">H2中国通识课程标准 [PDF]</a><br>
-   <a href="https://www.mci.gov.sg/careers-grants/scholarship/scholarship/scholarships-offered" class="btn01" target="_blank" style="color:#fff;font-family:KaiTi;">MCI奖学金链接</a>
-<p style="font-size:25px;font-family:KaiTi;">大学相关科系链接：</p>
  <div class="clearfix">
-  <div class="img-container2">
- <a href="https://www.ntu.edu.sg/soh/admissions/mti" class="btn01" target="_blank" style="color:#fff;font-family:Lato,sans-serif;">NTU M.A. Translation and Interpretation</a>
-<br>
- <a href="https://fass.nus.edu.sg/chs/minor/" class="btn01" target="_blank" style="color:#fff;font-family:Lato,sans-serif;">SUSS BA Translation and Interpretation</a>
-<br>
- <a href="https://www.ntu.edu.sg/soh/admissions/mti " class="btn01" target="_blank" style="color:#fff;font-family:Lato,sans-serif;">NTU M.A. Translation and Interpretation</a>
- <br>
+  <div class="img-container">
+  <a href="/files/2021-h2tr-syllabus.pdf" target="_blank" class="btn01" target="_blank" style="color:#fff;font-family:KaiTi;">
+    <span style="font-size:21px;font-family:KaiTi;">H2翻译课程标准</span></a>
+ </div>
+  </div>
+ <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">H2翻译相关链接 :</h4>
+<div class="row">
+  <div class="column">
+   <a href="https://www.moe.gov.sg/-/media/files/syllabus/2021-preu-h2-translation-chinese.pdf?la=en&hash=2516D3ED39A60CDD3CEFC44CE38D845166A446C9 " class="btn01" target="_blank" style="color:#fff;font-family:KaiTi;font-size: 21px;">H2中国通识课程标准 </a>
+  </div>
+  <div class="column">
+   <a href="https://www.mci.gov.sg/careers-grants/scholarship/scholarship/scholarships-offered" class="btn01" target="_blank" style="color:#fff;font-family:KaiTi; font-size: 21px;">MCI奖学金链接</a>
+  </div>
+  </div>
+<p style="font-size:35px;font-family:KaiTi;">大学相关科系链接：</p>
+ <div class="clearfix">
+  <div class="columnbtn03">
+  <a href="https://www.suss.edu.sg/programmes/detail/ba-translation-and-interpretation-bati" class="btn03" target="_blank" style="color:#fff;font-family:Lato,sans-serif;font-size:21px;">SUSS BA Translation and Interpretation</a>
+  </div>
+   <div class="columnbtn03">
+  <a href="https://fass.nus.edu.sg/chs/minor/" class="btn03" target="_blank" style="color:#fff;font-family:Lato,sans-serif;font-size:21px;">NUS FASS Department of Chinese Studies - Minor in Translation</a>
+  </div>
+   <div class="columnbtn03">
+<a href="https://www.ntu.edu.sg/soh/admissions/mti " class="btn03" target="_blank" style="color:#fff;font-family:Lato,sans-serif;font-size:21px;">NTU M.A. Translation and Interpretation</a>
+  </div>
+</div>
 <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">H2中国通识</h4>
 <img src="/images/MTLS2022_CL_Curriculum_V2_JC_6.jpg"><br/>
-<p style="font-size:25px;font-family:KaiTi;">大学相关科系链接：</p>
+<h4 style="font-size:35px;font-family:KaiTi;color:#d14165">H2中国通识</h4>
+<div class="clearfix">
+  <div class="img-container">
+ <a href="https://www.moe.gov.sg/-/media/files/syllabus/2023-preu-h2-china-studies-in-chinese.ashx?la=en&hash=85E04BFBF2585E8619ABE2CEA7616D83128F9DA7" target="_blank" class="btn8" style="color:#fff;font-family:KaiTi;">H2中国通识课程标准</a>
+  </div>
+  </div>
+<p style="font-size:25px;font-family:KaiTi;">大学相关科系链接</p>
   <div class="clearfix">
-  <div class="img-container2">
-<a href="https://www.ntu.edu.sg/soh/admissions/mti" target="_blank" class="btn01" style="color:#fff;font-family:KaiTi;">北京大学国际关系学院</a>
-<br>
- <a href="https://fass.nus.edu.sg/globalstudies/" target="_blank" class="btn01" style="color:#fff;font-family:Lato,sans-serif;font-size:14px;">NUS FASS Global Studies Programme</a>
-		<br>
-  <a href="https://www.ntu.edu.sg/hass/admissions/graduate-programmes/programmes-listing/detail/master-of-social-sciences-(china-and-global-governance)" target="_blank" class="btn01" style="color:#fff;font-family:Lato,sans-serif;font-size:14px;">NTU Masters of Social Sciences in China and Global Governance</a>
-  <br>
+  <div class="columnbtn03">
+ <a href="https://www.ntu.edu.sg/soh/admissions/mti" target="_blank" class="btn03" style="color:#fff;font-family:KaiTi;">北京大学国际关系学院</a>
+</div>
+ <div class="columnbtn03">
+ <a href="https://fass.nus.edu.sg/globalstudies/" target="_blank" class="btn03" style="color:#fff;font-family:Lato,sans-serif;font-size:14px;">NUS FASS Global Studies Programme</a>
+ </div>
+ <div class="columnbtn03">
+  <a href="https://www.ntu.edu.sg/hass/admissions/graduate-programmes/programmes-listing/detail/master-of-social-sciences-(china-and-global-governance)" target="_blank" class="btn03" style="color:#fff;font-family:Lato,sans-serif;font-size:14px;">NTU Masters of Social Sciences in China and Global Governance</a>
+</div></div>
 <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">高中华文课程数码资源</h4>
 <p style="font-size:25px;font-family:KaiTi;">新加坡学生学习平台 <span style="font-family: Lato,sans-serif;">(Singapore Student Learning Space) </span>为学生提供了丰富的学习资源。学生可以登录 <span style="font-family: Lato,sans-serif;">SLS </span>，搜索各高中华文科目的学习资源。这些资源能让学生进行延伸学习或巩固所学，同时也能培养他们自主学习的能力。</p>
    <br />
+<h4 style="font-size:35px;font-family:KaiTi;color:#d14165">H1华文数码资源示例:</h4>
 <div class="rowvideo">
  <div class="columnvideo">
-	  <center>
+    <center>
  <iframe width="645" height="361" src="https://www.youtube.com/embed/YngQbtjEUps" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br />
-<span style="color:#d14165;font-size:20px;font-family:KaiTi;"> H1华文数码资源示例行 
+<span style="color:#d14165;font-size:20px;font-family:KaiTi;"> SLS课堂活动 
 课堂活动</span></center>
    <br />
 </div>
+<h4 style="font-size:35px;font-family:KaiTi;color:#d14165">华文B数码资源示例:</h4>
  <div class="columnvideo">
-	  <center>
+    <center>
  <iframe width="645" height="361" src="https://www.youtube.com/embed/wLFDKHW4ogc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br />
- <span style="color:#d14165;font-size:20px;font-family:KaiTi;"> 华文B数码资源示例
+ <span style="color:#d14165;font-size:20px;font-family:KaiTi;"> 口试配套
 学生学习成果</span> </center>
    <br />
 </div></div>
+<h4 style="font-size:35px;font-family:KaiTi;color:#d14165">H2华文与文学数码资源示例:</h4>
 <div class="rowvideo">
  <div class="columnvideo">
-	  <center>
+    <center>
  <iframe width="645" height="361" src="https://www.youtube.com/embed/bMkJ4oFUkf8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br />
- <span style="color:#d14165;font-size:20px;font-family:KaiTi"> 语文课件：REAP策略
+ <span style="color:#d14165;font-size:20px;font-family:KaiTi"> 语文课件：REAP 策略
 课堂活动</span> </center>
    <br />
 </div>
  <div class="columnvideo">
-	  <center>
+    <center>
  <iframe width="645" height="361" src="https://www.youtube.com/embed/MYZ0v-4T4_Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe><br />
- <span style="color:#d14165;font-size:20px;font-family:KaiTi"> 文学课件：修辞手法学生学习成果</span> </center>
+ <span style="color:#d14165;font-size:20px;font-family:KaiTi"> 文学课件：修辞手法</span> </center>
    <br />
 </div>
-<h4 style="font-size:35px;font-family:KaiTi;color:#d14165">H2中国通识数码资源示例: [SLS 课件截图]</h4>
-  <img src="/images/CL-JC-Gif-1.gif"><br/>
-<h4 style="font-size:35px;font-family:KaiTi;color:#d14165">H2翻译数码资源示例：[SLS 课件截图]</h4>
-	<div class="row">
+<h4 style="font-size:35px;font-family:KaiTi;color:#d14165">H2中国通识数码资源示例:</h4>
+  <img src="/images/CL-JC-Gif-1.gif"><br/><span style="color:#d14165;font-size:20px;font-family:KaiTi">SLS 课件截图</span>
+<h4 style="font-size:35px;font-family:KaiTi;color:#d14165">H2翻译数码资源示例：</h4>
+  <div class="row">
  <div class="column" style="float: left;width: 100%; padding: 5px;padding-left:20px;">
-   <img src="/images/CL-JC-Gif-2.gif"></div>
+   <img src="/images/CL-JC-Gif-2.gif"><br/>
+   <span style="color:#d14165;font-size:20px;font-family:KaiTi">SLS 课件截图</span></div>
  </div>
 <br>
 <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">高中华文语文特选课程</h4>
