--- a/pages/高中.md
+++ b/pages/高中.md
@@ -160,7 +160,7 @@ padding: 26px;
     font-size: 18px;
     font-family: KaiTi;
     background-color:#d14165;
-    padding: 8px 8px;
+    padding: 13px 13px;
     border-radius: 6px;
     text-align: center;
     display: block;
@@ -239,7 +239,7 @@ width:80%;
  <a href="https://www.moe.gov.sg/-/media/files/post-secondary/syllabuses/mtl/2020-h2h3cll-syllabus.pdf?la=en&hash=3D0B0283BCFB6BCEE253077B44A97CE1FA28F619" class="btn1" style="color:#fff;font-family:KaiTi; font-size:21px">H2/H3华文与文学课程标准</a>
   </div>
    <div class="img-container1">
- <a href="https://www.moe.gov.sg/-/media/files/post-secondary/syllabuses/mtl/2020-h2h3mtll-syllabus.pdf?la=en&hash=5E5872607A094E2A64EB0D96A419FBA86CCAB8AE" class="btn2" style="color:#fff;font-family:Lato,sans-serif;font-size:21px">H2/H3 Mother Tongue Language and Literature Syllabus Document</a>
+ <a href="https://www.moe.gov.sg/-/media/files/post-secondary/syllabuses/mtl/2020-h2h3mtll-syllabus.pdf?la=en&hash=5E5872607A094E2A64EB0D96A419FBA86CCAB8AE" class="btn2" style="color:#fff;font-family:Lato,sans-serif;font-size:21px;">H2/H3 Mother Tongue Language and Literature Syllabus Document</a>
   </div>
   </div>
 <h4  style="font-size:35px;font-family:KaiTi;color:#d14165">大学相关科系链接：
@@ -293,23 +293,24 @@ width:80%;
   </div>
 </div>
 <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">H2中国通识</h4>
-<img src="/images/MTLS2022_CL_Curriculum_V2_JC_6.jpg"><br/>
+<img src="/images/MTLS2022_CL_Curriculum_V2_JC_6.jpg">
+	<br/>
 <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">H2中国通识</h4>
 <div class="clearfix">
   <div class="img-container">
- <a href="https://www.moe.gov.sg/-/media/files/syllabus/2023-preu-h2-china-studies-in-chinese.ashx?la=en&hash=85E04BFBF2585E8619ABE2CEA7616D83128F9DA7" target="_blank" class="btn8" style="color:#fff;font-family:KaiTi;">H2中国通识课程标准</a>
+ <a href="https://www.moe.gov.sg/-/media/files/syllabus/2023-preu-h2-china-studies-in-chinese.ashx?la=en&hash=85E04BFBF2585E8619ABE2CEA7616D83128F9DA7" target="_blank" class="btn8" style="color:#fff;font-family:KaiTi; font-size:21px;">H2中国通识课程标准</a>
   </div>
   </div>
 <p style="font-size:25px;font-family:KaiTi;">大学相关科系链接</p>
   <div class="clearfix">
   <div class="columnbtn03">
- <a href="https://www.ntu.edu.sg/soh/admissions/mti" target="_blank" class="btn03" style="color:#fff;font-family:KaiTi;">北京大学国际关系学院</a>
+ <a href="https://www.ntu.edu.sg/soh/admissions/mti" target="_blank" class="btn03" style="color:#fff;font-family:KaiTi; font-size:21px;">北京大学国际关系学院</a>
 </div>
  <div class="columnbtn03">
- <a href="https://fass.nus.edu.sg/globalstudies/" target="_blank" class="btn03" style="color:#fff;font-family:Lato,sans-serif;font-size:14px;">NUS FASS Global Studies Programme</a>
+ <a href="https://fass.nus.edu.sg/globalstudies/" target="_blank" class="btn03" style="color:#fff;font-family:Lato,sans-serif;font-size:21px;">NUS FASS Global Studies Programme</a>
  </div>
  <div class="columnbtn03">
-  <a href="https://www.ntu.edu.sg/hass/admissions/graduate-programmes/programmes-listing/detail/master-of-social-sciences-(china-and-global-governance)" target="_blank" class="btn03" style="color:#fff;font-family:Lato,sans-serif;font-size:14px;">NTU Masters of Social Sciences in China and Global Governance</a>
+  <a href="https://www.ntu.edu.sg/hass/admissions/graduate-programmes/programmes-listing/detail/master-of-social-sciences-(china-and-global-governance)" target="_blank" class="btn03" style="color:#fff;font-family:Lato,sans-serif;font-size:21px;">NTU Masters of Social Sciences in China and Global Governance</a>
 </div></div>
 <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">高中华文课程数码资源</h4>
 <p style="font-size:25px;font-family:KaiTi;">新加坡学生学习平台 <span style="font-family: Lato,sans-serif;">(Singapore Student Learning Space) </span>为学生提供了丰富的学习资源。学生可以登录 <span style="font-family: Lato,sans-serif;">SLS </span>，搜索各高中华文科目的学习资源。这些资源能让学生进行延伸学习或巩固所学，同时也能培养他们自主学习的能力。</p>
