--- a/pages/高中.md
+++ b/pages/高中.md
@@ -340,13 +340,15 @@ width:80%;
  <span style="color:#d14165;font-size:20px;font-family:KaiTi"> 文学课件：修辞手法</span> </center>
    <br />
 </div>
-<h4 style="font-size:35px;font-family:KaiTi;color:#d14165">H2中国通识数码资源示例:</h4>
-  <img src="/images/CL-JC-Gif-1.gif"><br/><span style="color:#d14165;font-size:20px;font-family:KaiTi">SLS 课件截图</span>
+<h4 style="font-size:35px;font-family:KaiTi;color:#d14165">H2中国通识数码资源示例:</h4><center>
+  <img src="/images/CL-JC-Gif-1.gif"><br/><span style="color:#d14165;font-size:20px;font-family:KaiTi">SLS 课件截图</span></center>
 <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">H2翻译数码资源示例：</h4>
   <div class="row">
  <div class="column" style="float: left;width: 100%; padding: 5px;padding-left:20px;">
+	 <center>
    <img src="/images/CL-JC-Gif-2.gif"><br/>
-   <span style="color:#d14165;font-size:20px;font-family:KaiTi">SLS 课件截图</span></div>
+   <span style="color:#d14165;font-size:20px;font-family:KaiTi;">SLS 课件截图</span>
+	 </center></div>
  </div>
 <br>
 <h4 style="font-size:35px;font-family:KaiTi;color:#d14165">高中华文语文特选课程</h4>
