--- a/pages/உயர்நிலை.md
+++ b/pages/உயர்நிலை.md
@@ -138,12 +138,12 @@ width:90%;
   </div>
 </div>
  <img src="/images/MTLS2022_TL_Curriculum_V2_SecSch_5.jpg" /><br />
-<p style="text-align:center;font-family:Anjal New InaiMathi Sch Book; font-size:20px" class="lbCh">மாணவர் கற்றல் தளத்தில் நடப்புச் செய்திகள்
-</p>
-       <center>
-         <iframe width="560" height="315" src="https://www.youtube.com/embed/nnuIhutTDUM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe></center>
 <h2 style="font-family:Anjal New InaiMathi Sch Book; font-size:30px; font-weight:bold; text-align:center;">தகவல் தொடர்புத் தொழில்நுட்பத்தின் கூடுதல் ஒருங்கிணைப்பு</h2>
 <img src="/images/tl-sec_poster07.jpg" />
+<h4 style="font-family:Anjal New InaiMathi Sch Book; font-weight: bold; text-align: center; font-size:24px"> மாணவர் கற்றல் தளத்தில் நடப்புச் செய்திகள்
+</h4>
+<center>
+         <iframe width="560" height="315" src="https://www.youtube.com/embed/nnuIhutTDUM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe></center>
  <img src="/images/MTLS2022_TL_Curriculum_V1_SecSch_6.jpg" /><br />
 	  <img src="/images/tl-sec_books.gif" style="width:40%;" />
 <p style="font-family:Anjal New InaiMathi Sch Book; font-size:20px; text-align:center;" class="lbCh">மாணவர் கற்றல் தளம்
