--- a/pages/உயர்நிலை.md
+++ b/pages/உயர்நிலை.md
@@ -146,13 +146,13 @@ width:90%;
          <iframe width="560" height="315" src="https://www.youtube.com/embed/nnuIhutTDUM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe></center>
  <img src="/images/MTLS2022_TL_Curriculum_V1_SecSch_6.jpg" /><br />
 	  <img src="/images/tl-sec_books.gif" style="width:40%;" />
-<p style="font-family:Anjal New InaiMathi Sch Book; font-size:20px; text-align:center;" class="lbCh">மாணவர் கற்றல் தளம்
-</p>
+ <h4 style="font-family:Anjal New InaiMathi Sch Book; font-weight: bold; text-align: center; font-size:24px"> மாணவர் கற்றல் தளம்
+</h4>
  <center>
   <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/fIHrnUN7Lp0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe></center>
  <img src="/images/tl-sec_poster09.jpg" /><br />
-<p style="font-family:Anjal New InaiMathi Sch Book; font-size:20px; text-align:center;">எழுத்திலிருந்து பேச்சுமொழி வடிவமாற்றம்
-</p>
+ <h4 style="font-family:Anjal New InaiMathi Sch Book; font-weight: bold; text-align: center; font-size:24px">எழுத்திலிருந்து பேச்சுமொழி வடிவமாற்றம்
+</h4>
   <center>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/grfbtAhjzxw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe></center>
 <h2 id="C6" style="font-family:Anjal New InaiMathi Sch Book;  font-size:36px; font-weight:bold; text-align:center;">தமிழ் இலக்கியம்	(Tamil Language Elective Programme (TLEP)</h2>
