--- a/pages/高中.md
+++ b/pages/高中.md
@@ -245,7 +245,7 @@ width:80%;
  <a href="https://www.moe.gov.sg/-/media/files/post-secondary/syllabuses/mtl/2020-h2h3mtll-syllabus.pdf?la=en&hash=5E5872607A094E2A64EB0D96A419FBA86CCAB8AE" class="btn2" style="color:#fff;font-family:Lato,sans-serif;font-size:21px;">H2/H3 Mother Tongue Language and Literature Syllabus Document</a>
   </div>
   </div>
-<h4  style="font-size:35px;font-family:KaiTi;color:#d14165">大学相关科系链接：
+<h4 style="font-size:35px;font-family:KaiTi;color:#000">大学相关科系链接
 </h4>
 <div class="clearfix">
   <div class="img-container">
@@ -283,7 +283,7 @@ width:80%;
    <a href="https://www.mci.gov.sg/careers-grants/scholarship/scholarship/scholarships-offered" class="btn01" target="_blank" style="color:#fff;font-family:KaiTi; font-size: 21px;">MCI奖学金链接</a>
   </div>
   </div>
-<p style="font-size:35px;font-family:KaiTi;">大学相关科系链接：</p>
+<h4 style="font-size:35px;font-family:KaiTi;color:#000">大学相关科系链接</h4>
  <div class="clearfix">
   <div class="columnbtn03">
   <a href="https://www.suss.edu.sg/programmes/detail/ba-translation-and-interpretation-bati" class="btn03" target="_blank" style="color:#fff;font-family:Lato,sans-serif;font-size:21px;">SUSS BA Translation and Interpretation</a>
