--- a/pages/高中.md
+++ b/pages/高中.md
@@ -304,7 +304,7 @@ width:80%;
  <a href="https://www.moe.gov.sg/-/media/files/syllabus/2023-preu-h2-china-studies-in-chinese.ashx?la=en&hash=85E04BFBF2585E8619ABE2CEA7616D83128F9DA7" target="_blank" class="btn8" style="color:#fff;font-family:KaiTi; font-size:21px;">H2中国通识课程标准</a>
   </div>
   </div>
-<h4 style="font-size:35px;font-family:KaiTi;color:#000">大学相关科系链接</4>
+<h4 style="font-size:35px;font-family:KaiTi;color:#000">大学相关科系链接</h4>
   <div class="clearfix">
   <div class="columnbtn03">
  <a href="https://www.ntu.edu.sg/soh/admissions/mti" target="_blank" class="btn03" style="color:#fff;font-family:KaiTi; font-size:21px;">北京大学国际关系学院</a>
