--- a/pages/உயர்நிலை.md
+++ b/pages/உயர்நிலை.md
@@ -115,28 +115,9 @@ width:90%;
   <img src="/images/MTLS2022_TL_Curriculum_V2_SecSch_3.gif" />
   <h2 id="C4" style="font-family:Anjal New InaiMathi Sch Book; font-size:30px; font-weight:bold; text-align:center;">புதிய கூறுகளும் புதிய முயற்சிகளும் </h2>
  <img src="/images/tl-sec_poster05.jpg" /><br /> 
-  <img  id="C9" src="/images/MTLS2022_TL_Curriculum_V2_SecSch_4.jpg" />
-  <h2 id="C10" style="font-family:Anjal New InaiMathi Sch Book;  font-size:30px; font-weight:bold; text-align:center;">இலக்கியப் பனுவல்களின் வாயிலாக மொழி ஈடுபாட்டை வளர்த்தல் </h2>
-<p style="font-family:Anjal New InaiMathi Sch Book; text-align:justify; padding: 8px; font-size:24px;">மாணவர்களின் மொழியறிவுக்கு ஏற்ற நல்ல இலக்கியப் பனுவல்கள் கற்பனையாற்றலைத் தூண்டி நூல் படித்தலில் ஈடுபாட்டை வளர்க்கும். அதனால், அவர்களின் மொழி கற்றல் மேம்பட்டு, அவர்கள் தமிழ் நூல்களை விரிவாகப் படிக்கத் தொடங்குவார்கள்.<br />
- <br />
-இதற்கு ஏதுவாக ஒவ்வோர் ஆண்டும் மாணவர்களுக்கு இலக்கியப் பனுவல்கள் அறிமுகப்படுத்தப்பெறுகின்றன.  இவ்வாண்டு உயர்நிலை ஒன்று மாணவர்களுக்குச் சிறுகதைகள் பாடவளங்களாக வழங்கப்பெற்றுள்ளன.
- அடுத்தாண்டு உயர்நிலை இரண்டு மாணவர்கள் கவிதை இலக்கியத்தைப் படித்து மகிழ்வர். </p>
-<div class="row">
-  <div class="column">
-    <img src="/images/TL Sec 1.png" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="/images/TL-Sec-3.png" style="width:100%">
-  </div>
-  </div>
-<div class="row">
-  <div class="column">
-    <img src="/images/TL-Sec-2.png" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="/images/Tl-Sec-4.png" style="width:100%">
-  </div>
-</div>
+  <img  id="C9" src="/images/MTLS2022_TL_Curriculum_V2_SecSch_4.jpg" /><br>
+<img  id="C10" src="/images/MTLS2022_TL_Curriculum_V3_SecSch_7.jpg
+" /><br>
  <img src="/images/MTLS2022_TL_Curriculum_V2_SecSch_5.jpg" /><br />
 <h2 style="font-family:Anjal New InaiMathi Sch Book; font-size:30px; font-weight:bold; text-align:center;">தகவல் தொடர்புத் தொழில்நுட்பத்தின் கூடுதல் ஒருங்கிணைப்பு</h2>
 <img src="/images/tl-sec_poster07.jpg" />
