--- a/pages/உயர்நிலை.md
+++ b/pages/உயர்நிலை.md
@@ -119,8 +119,8 @@ width:90%;
 <img  id="C10" src="/images/MTLS2022_TL_Curriculum_V3_SecSch_7.jpg
 " /><br>
  <img src="/images/MTLS2022_TL_Curriculum_V2_SecSch_5.jpg" /><br />
-<h2 style="font-family:Anjal New InaiMathi Sch Book; font-size:30px; font-weight:bold; text-align:center;">தகவல் தொடர்புத் தொழில்நுட்பத்தின் கூடுதல் ஒருங்கிணைப்பு</h2>
-<img src="/images/tl-sec_poster07.jpg" />
+	 <img src="/images/MTLS2022_TL_Curriculum_V3_SecSch_8.jpg
+" /><br />
 <h4 style="font-family:Anjal New InaiMathi Sch Book; font-weight:bold; text-align: center; font-size:24px"> மாணவர் கற்றல் தளத்தில் நடப்புச் செய்திகள்
 </h4>
 <center>
