--- a/pages/小学.md
+++ b/pages/小学.md
@@ -334,7 +334,7 @@ width:100%;
 </span></center>
 <h4 style="text-align:center;font-family:KaiTi;font-size:35px;">  补充资源</h4>
 <table><td style="text-align: left;font-family:KaiTi;background-color:#d84178;font-size: 22px;color: #fff;font-size:25px;
-	font-weight: 700;"> 一、二年级语文游</td></table>
+	font-weight: 700;"> 一、二年级语文游戏 </td></table>
 <center>
   <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/hTRI4mXaEp0" title="P1P2语文游戏" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>  <br />
      <span style="color:#d14165;font-size:18px;font-family:KaiTi">一、二年级语文游戏 </span></center>
