--- a/pages/小学.md
+++ b/pages/小学.md
@@ -123,8 +123,6 @@ width:100%;
   <tr>
     <td style="text-align: left;font-family:KaiTi;">
     <li style="text-align: left;;font-family:KaiTi;font-size:25px;">选取适合学生年龄和认知发展的语料和方式。</li>
-  </tr>
-</table>
 <br/>
 <img src="/images/Picture-Pri-1.png">
 <br/>
@@ -136,9 +134,6 @@ width:100%;
   <tr>
     <td style="text-align: left;font-family:KaiTi;">
     <li style="text-align: left;;font-family:KaiTi;font-size:25px;">以学生为本，照顾学生差异</li>
-
-  </tr>
-</table>
 <br/>
 <img src="/images/Picture-Pri-2.png">
 <br/>
@@ -356,7 +351,7 @@ width:100%;
  </center>
 <table><td style="text-align: left;font-family:KaiTi;background-color:#d84178;font-size: 22px;color: #fff;font-size:25px;
 	font-weight: 700;"> 趣味录像、口语/写作练习</td></table>
-<p style="font-family:KaiTi;font-size:25px">一天一点系列</p>
+<li style="font-family:KaiTi;font-size:25px"> 一天一点系列</li>
 <center>
   <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/VNGppNYxN88" title="一天一点 之不见？走失？(Get Lost)" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>  <br />
      <span style="color:#d14165;font-size:18px;font-family:KaiTi">一天一点之不见？走失？（Get lost）</span>
