--- a/pages/学前教育.md
+++ b/pages/学前教育.md
@@ -100,7 +100,7 @@ description: ""
    <td>
 <h4 style="font-family:KaiTi;font-size:25px;">点子二: 我是小小导游 </h4>
   <p style="font-size:25px;font-family:KaiTi">
-你可以利用再循环材料与孩子一起制作交通工具（如：折纸船 <a href="http://tinyurl.com/paperboat2022" target="_blank;"> http://tinyurl.com/paperboat2022</a>)，然后结合点子一的新加坡景点贴画，让孩子为家人设计一日游，并请孩子说一说。
+你可以利用再循环材料与孩子一起制作交通工具（如：折纸船 <a href="http://tinyurl.com/paperboat2022" target="_blank;"> http://tinyurl.com/paperboat2022</a>），然后结合点子一的新加坡景点贴画，让孩子为家人设计一日游，并请孩子说一说。
 </p>
 </td>
   </table><br />
