--- a/pages/ம செ க சமூக அறநிறுவனம் ஸ்பார்கல்டாட்ஸ் பாலர் பள்ளி சுவா சூ காங் புளோக் 10.md
+++ b/pages/ம செ க சமூக அறநிறுவனம் ஸ்பார்கல்டாட்ஸ் பாலர் பள்ளி சுவா சூ காங் புளோக் 10.md
@@ -32,7 +32,7 @@ description: ""
 }
  </style>
  <p><a href="/exhibits/tamil-exhibitions-c/preschool/" style="float:left;" class="backbtn">Back</a><br /></p>
-<p><img src="/images/Posters/tl-PCF-CCK-V3.jpg" />
+<p><img src="/images/Posters/TL_PCF(CCK)_v4.jpg" />
 <br /><br /></p>
 <p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site, the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
