--- a/pages/林景小学.md
+++ b/pages/林景小学.md
@@ -33,7 +33,7 @@ description: ""
  </style>
  <p><a href="/exhibits/chinese-exhibitions-d/schools/" style="float:left;" class="backbtn">Back</a><br /></p>
 <p>
-<img src="/images/Posters/MTLS_Woodgrove Pri_v3B.jpeg" />
+<img src="/images/Posters/MTLS_Woodgrove Pri_v4.jpg" />
 <br /></p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/0Yi_tyotyY0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <span style="font-family:KaiTi; font-size:20px;">林景华文小学堂录像简介 </span><br/>
