--- a/pages/美廉小学.md
+++ b/pages/美廉小学.md
@@ -32,7 +32,7 @@ description: ""
 }
 </style>
 <a href="/exhibits/chinese-exhibitions-d/schools/" style="float:left;" class="backbtn">Back</a><br>
-<img src="/images/Posters/MTLS_Meridian Pri_v4B_LESS25MB.jpeg">
+<img src="/images/Posters/MTLS_Meridian Pri_v5_LESS25MB.jpg">
 <br/><br/><br/>
 <iframe width="800" height="320" src="https://www.youtube.com/embed/DV9-l4Y9bnE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><b><span style="font-family:KaiTi; font-size:22px">美廉游戏日</span></b>
 <br/><br/><br/>
