--- a/pages/裕廊中学（简介）.md
+++ b/pages/裕廊中学（简介）.md
@@ -3,10 +3,6 @@ title: 裕廊中学（简介）
 permalink: /Jurong-Secondary-School-synopses
 description: ""
 ---
-
-
-
-
 <style>
    .btntop {
     position: fixed;
@@ -41,6 +37,6 @@ description: ""
  学生通过完成多元的阅读成品，包括撰写书信、阅读笔记、思维导图与四格漫画等，展示和记录他们对故事内容的理解以及对课题的深入思考。
 </p>
 <h4 style="font-size: 35px;font-family: Lato,sans-serif;padding-top:12px;margin:10px;color: #d84178;">Inspiring a Love of Reading in Students</h4>
-<p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">Jurong Secondary School actively implements a school-based reading programme across different streams at the Secondary One level. Teachers come together as a team to design diversified and differentiated reading activities that cater to different students’ needs. These include the Reading Circle and student discussions through Padlet, The team also looks into inculcating the joy of reading in students through the use of technology platforms. This programme enables students to demonstrate and record their understanding and thinking about the subject through a variety of text types such as letters, reading notes, mind maps and four-frame comics.</p>
+<p  style="font-size: 20px;font-family:Lato,sans-serif;text-align:justify;">Jurong Secondary School actively implements a school-based reading programme across different streams at the Secondary One level. Teachers come together as a team to design diversified and differentiated reading activities that cater to different students’ needs. These include the Reading Circle and student discussions through Padlet. The team also looks into inculcating the joy of reading in students through the use of technology platforms. This programme enables students to demonstrate and record their understanding and thinking about the subject through a variety of text types such as letters, reading notes, mind maps and four-frame comics.</p>
 <p style="font-size: 16px;font-family: Lato,sans-serif;font-style: italic;padding-top:12px;text-align:justify;">For the best and most accurate viewing experience of this site , the fonts, Murasu Anjal and KaiTi will need to be installed on your device.</p>
 <div class="btntop"><a href="#top" style="text-decoration:none;"><span style="color:white"><b>Top</b></span></a></div>
