Update file: பல்கலைக்கழகப் புகுமுக நிலை.md

--- a/pages/பல்கலைக்கழகப் புகுமுக நிலை.md
+++ b/pages/பல்கலைக்கழகப் புகுமுக நிலை.md
@@ -91,7 +91,7 @@ width:100%;
 </span></a><br />
  <a href="#C6" style="font-size:20px; font-family:Anjal New InaiMathi Sch Book;"><span style="color:blue;">ஆசிரியர்களது பணிமேம்பாடு
 </span></a><br />
- <a href="#C7" style="font-size:20px; font-family:Anjal New InaiMathi Sch Book;"><span style="color:blue;">தமிழ்மொழி விருப்பப்பாடத்திட்டம்
+ <a href="#C7" style="font-size:20px; font-family:Anjal New InaiMathi Sch Book;"><span style="color:blue;">தமிழ்மொழி விருப்பப்பாடத் (sp)திட்டம்
 </span></a><br /><br />
 <h4 id="C1"><span style="font-size:30px; font-family:Anjal New InaiMathi Sch Book; color:purple;">தாய்மொழியின் இலக்கு
  </span></h4>
