Update file: பல்கலைக்கழகப் புகுமுக நிலை.md

--- a/pages/பல்கலைக்கழகப் புகுமுக நிலை.md
+++ b/pages/பல்கலைக்கழகப் புகுமுக நிலை.md
@@ -182,7 +182,7 @@ width:100%;
 <img src="/images/MTLS2022_TL_JC_Curriculum_V1_JC_1.jpg"><br>
 <img src="/images/MTLS2022_TL_JC_Curriculum_V1_JC_2.jpg"><br>
 <h4 style="font-family:Anjal New InaiMathi Sch Book;color:purple;font-size:30px;">விளையாட்டுவழி பாட உருவாக்கம் </h4>
-<p style="font-family:Anjal New InaiMathi Sch Book;font-size:22px;">மாணவர்கள் விளையாட்டு வழி பாடங்களைக் கற்க  விளையாட்டுவழி பாட உருவாக்கம் (Gamification) என்னும் புதிய கூறு இணைக்கப்பட்டுள்ளது. மாணவர்கள் அதிக ஈடுபாட்டுடன் தமிழ்மொழியைக் கற்க இந்தப் புதிய கூறு துணைபுரிகிறது.</p>
+<p style="font-family:Anjal New InaiMathi Sch Book;font-size:22px;">மாணவர்கள் விளையாட்டு வழி பாடங்களைக் கற்க  விளையாட்டுவழி பாட உருவாக்கம் (Gamification) என்னும் புதிய கூறு இணைக்கப்பட்டுள்ளது. மாணவர்கள் அதிக ஈடுபாட்டுடன் தமிழ்மொழியைக் கற்க இந்தப் புதிய புதியதொருுணைபுரிகிறது.</p>
 <img src="/images/pic-37.jpg"><br/>
  <iframe class="iframe2" width="560" height="315" src="https://www.youtube.com/embed/QXvV21a-TqE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe> 
  <br>
