--- a/_sharing-session/华文视频.md
+++ b/_sharing-session/华文视频.md
@@ -49,7 +49,7 @@ text-decoration:none;
 </style>
 </head>
 <body>
-	<h4 style="font-family:Lato,sans-serif;"><b>Sharing Sessions</b></h4>
+	<h4 style="font-family:Lato,sans-serif;"><b>Sharing Session</b></h4>
 <table style="border-collapse: collapse;
   width: 100%;">
   <tr>
@@ -63,7 +63,7 @@ Ms Wang Zheng  <br/>
  <a href="/Ms-Wang-Zheng" class="btn1" style="color:#fff;font-family:KaiTi;font-size:22px;">观看视频</a></td>
     </tr>
 </table>
-	<h4 style="font-family:Lato,sans-serif;"><b>Storytelling Sessions</b></h4>
+	<h4 style="font-family:Lato,sans-serif;"><b>Storytelling Session</b></h4>
 <table style="border-collapse: collapse;
   width: 100%;">
   <tr>
@@ -71,15 +71,15 @@ Ms Wang Zheng  <br/>
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:Kaiti;font-size:22px;"> 悦读花园的小故事<br/>
 			<span style="font-family:Lato,sans-serif; font-size:18px">[Online Storytelling Sessions (For K1 – P2 students) from 1.00pm to 2.00pm]<br/><br/>
   Ms Melissa Choo See Check<br/>
-		Associate Librarian, Chinese Language,
-Collection Planning and Development,  National Library Board</span></td>
+		Associate Librarian, Chinese Language,<br/>
+Collection Planning and Development, National Library Board</span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
  <a href="/Ms-Melissa-Choo-See-Check" class="btn1" style="color:#fff;font-family:KaiTi;font-size:22px;">观看视频</a>
 </td>
     </tr>
 </table>
-	<h4 style="font-family:Lato,sans-serif;"><b>Interactive Workshops</b></h4>
+	<h4 style="font-family:Lato,sans-serif;"><b>Interactive Workshop</b></h4>
 <table style="border-collapse: collapse;
   width: 100%;">
   <tr>
@@ -94,7 +94,7 @@ Collection Planning and Development,  National Library Board</span></td>
  </td>
     </tr>
 </table>
-	<h4 style="font-family:Lato,sans-serif;"><b>Engagement Sessions</b></h4>
+	<h4 style="font-family:Lato,sans-serif;"><b>Engagement Session</b></h4>
 <table style="border-collapse: collapse;
   width: 100%;">
   <tr>
