--- a/_sharing-session/华文视频.md
+++ b/_sharing-session/华文视频.md
@@ -55,7 +55,7 @@ text-decoration:none;
   <tr>
     <td style="border: none; width: 70%;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;font-size:22px;">学华语：不要为学而学<br/>
- <span style="font-family:Lato,sans-serif; font-size:18px">[Live Sharing Sessions (For Parents) from 4.00pm to 5.00pm] <br/><br/>
+ <span style="font-family:Lato,sans-serif; font-size:18px">[Live Sharing Session (For Parents) from 4.00pm to 5.00pm] <br/><br/>
 Ms Wang Zheng  <br/>
 	Mediacorp Anchor </span></td>
     <td style="border: none;
@@ -69,7 +69,7 @@ Ms Wang Zheng  <br/>
   <tr>
     <td style="border: none; width: 70%;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:Kaiti;font-size:22px;"> 悦读花园的小故事<br/>
-			<span style="font-family:Lato,sans-serif; font-size:18px">[Online Storytelling Sessions (For K1 – P2 students) from 1.00pm to 2.00pm]<br/><br/>
+			<span style="font-family:Lato,sans-serif; font-size:18px">[Online Storytelling Session (For K1 – P2 students) from 1.00pm to 2.00pm]<br/><br/>
   Ms Melissa Choo See Check<br/>
 		Associate Librarian, Chinese Language,<br/>
 Collection Planning and Development, National Library Board</span></td>
@@ -85,7 +85,7 @@ Collection Planning and Development, National Library Board</span></td>
   <tr>
     <td style="border: none; width: 70%;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;font-size:22px;">走进奇妙的动物世界<br/>
-  <span style="font-family:Lato,sans-serif; font-size:18px">[Online Interactive Workshops (For Parent-Child Activity) from 2.30pm to 3.30pm]<br/><br/>
+  <span style="font-family:Lato,sans-serif; font-size:18px">[Online Interactive Workshop (For Parent-Child Activity) from 2.30pm to 3.30pm]<br/><br/>
  Ms Ong Peiying  <br/>
 		Senior Manager (Education), Mandai Wildlife Group </span></td>
     <td style="border: none;
@@ -100,11 +100,11 @@ Collection Planning and Development, National Library Board</span></td>
   <tr>
     <td style="border: none; width: 70%;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;font-size:22px;">庆中秋线上互动活动<br/>
-  <span style="font-family:Lato,sans-serif; font-size:18px">[Online Engagement Sessions (For P1 to P4 Students) from 5.30pm to 6.30pm]<br/><br/>
+  <span style="font-family:Lato,sans-serif; font-size:18px">[Online Engagement Session (For P1 to P4 Students) from 5.30pm to 6.30pm]<br/><br/>
 Mdm Jiang Yanyan  <br/>
-		Senior Teacher, Chinese Language, Princess Elizabeth Primary School
+Senior Teacher, Chinese Language, Princess Elizabeth Primary School
 <br>
- Recipient of Distinguished Chinese Language Teachers Awards 2021 </span></td>
+Recipient of Distinguished Chinese Language Teachers Awards 2021 </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
  <a href="/Mdm-Jiang-Yanyan" class="btn1" style="color:#fff;font-family:KaiTi;font-size:22px;">观看视频</a>
@@ -116,7 +116,7 @@ Mdm Jiang Yanyan  <br/>
   <tr>
     <td style="border: none; width: 70%;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;font-size:22px;">贴士和策略：通过讲故事激发孩子对华文的兴趣<br/>
-  <span style="font-family:Lato,sans-serif; font-size:18px">[Pre-Recorded Sessions (Recordings will be made available online from 27 August 2022)]<br/><br/>
+  <span style="font-family:Lato,sans-serif; font-size:18px">[Recordings will be made available online from 27 August 2022]<br/><br/>
 Ms Siau Jiahui <br/>
 	Mediacorp YES 933DJ</span> </td>
     <td style="border: none;
