--- a/_sharing-session/华文视频.md
+++ b/_sharing-session/华文视频.md
@@ -170,8 +170,8 @@ Mdm Corinne Madelyn Fan Wai Foong  <br/>
     <td style="border: none; width: 70%;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;font-size:22px;">阅读促进认知发展<br/>
  <span style="font-family:Lato,sans-serif; font-size:18px">[Pre-Recorded Sessions (Recordings will be made available online from 27 August 2022)]<br/><br/>
-Professor Wu Nianyang   <br/>
-	 Professor, Shanghai Normal University, School of Education  </span></td>
+Professor Wu Nianyang <br/>
+Professor, Shanghai Normal University, School of Education  </span></td>
     <td style="border: none;
   text-align: left;padding: 8px;width: 30%;">
  <a href="/Professor-Wu-Nian-Ying" class="btn1" style="color:#fff;font-family:KaiTi;font-size:22px;">观看视频</a>
@@ -184,7 +184,7 @@ Professor Wu Nianyang   <br/>
   <tr>
     <td style="border: none; width: 70%;
   text-align: left;padding: 8px;background-color:#d84178;color:#fff;font-family:KaiTi;font-size:22px;">从学前到小学，为孩童打造积极的华文学习体验<br/>
-  <span style="font-family:Lato,sans-serif; font-size:18px">[Hybrid Sharing Sessions (For Educators) from 11.30am to 12.30pm]<br/><br/>
+  <span style="font-family:Lato,sans-serif; font-size:18px">[Hybrid Sharing Session (For Educators) from 11.30am to 12.30pm]<br/><br/>
 Dr Zheng Yingjiang   <br/>
 		Master Teacher, AST, SCCL (Teacher-in-Residence at Blangah Rise Primary School and MK) </span></td>
     <td style="border: none;
